# gauss-code

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/: agent.py  main.py  session.py  stream_buffer.py
tests/: test_main.py
